# build-stuff-zero-to-shipped

./: README.md
kiro-book/: review.md  (+2 more)
kiro/fact-checker/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  deploy.sh  pyproject.toml  run.py  start.sh  test-local.sh
kiro/fact-checker/.kiro/hooks/: add-license-headers.kiro.hook
kiro/fact-checker/.kiro/settings/: mcp.json
kiro/fact-checker/.kiro/steering/: codeing-preferences.md
kiro/fact-checker/app/src/: __init__.py  extensions.py
kiro/fact-checker/app/src/.ash/ash_output/: ash-scan-set-files-list.txt  ash_aggregated_results.json
kiro/fact-checker/app/src/.ash/ash_output/reports/: ash.csv  ash.flat.json  ash.gl-sast-report.json  ash.html  ash.junit.xml  ash.sarif  ash.summary.md  ash.summary.txt
kiro/fact-checker/app/src/.ash/ash_output/scanners/bandit/source/: ASH.ScanResults.json  bandit.sarif
kiro/fact-checker/app/src/models/: __init__.py  category.py  fact.py  user.py  vote.py
kiro/fact-checker/app/src/routes/: __init__.py  auth.py  categories.py  facts.py  main.py
kiro/fact-checker/app/src/static/css/: style.css
kiro/fact-checker/app/src/templates/: base.html  dashboard.html  index.html
kiro/fact-checker/app/src/templates/auth/: login.html  register.html
kiro/fact-checker/app/src/templates/categories/: create.html
kiro/fact-checker/app/src/templates/facts/: create.html  view.html
kiro/fact-checker/data-model/: fact-checker.sql
kiro/fact-checker/planning/: code_plan.md
kiro/fact-checker/terraform/: main.tf  outputs.tf  variables.tf
(+81 files in other folders)
